# nba-lab-cpp

./: CMakeLists.txt  README.md  config.json
results/bet_history/: meanrev_AST_dev0.3_lr4_ls59_hr0.45_k0.048.jsonl  meanrev_AST_dev0.4_lr8_ls39_hr0.51_k0.053.jsonl  meanrev_AST_dev0.5_lr3_ls26_hr0.60_k0.014.jsonl  meanrev_AST_dev0.6_lr4_ls27_hr0.52_k0.011.jsonl  meanrev_AST_dev0.6_lr4_ls37_hr0.40_k0.045.jsonl  meanrev_AST_dev0.6_lr6_ls23_hr0.40_k0.073.jsonl  meanrev_AST_dev0.6_lr6_ls28_hr0.60_k0.032.jsonl  meanrev_AST_dev0.6_lr6_ls52_hr0.40_k0.013.jsonl  meanrev_AST_dev0.8_lr10_ls43_hr0.53_k0.080.jsonl  meanrev_AST_dev0.9_lr4_ls33_hr0.63_k0.043.jsonl  meanrev_AST_dev1.0_lr4_ls18_hr0.56_k0.086.jsonl  meanrev_AST_dev1.1_lr4_ls49_hr0.46_k0.036.jsonl  meanrev_AST_dev1.1_lr7_ls30_hr0.55_k0.070.jsonl  meanrev_AST_dev1.1_lr7_ls53_hr0.47_k0.053.jsonl  meanrev_AST_dev1.3_lr7_ls36_hr0.45_k0.092.jsonl  meanrev_AST_dev1.3_lr7_ls54_hr0.60_k0.034.jsonl  meanrev_AST_dev1.4_lr4_ls56_hr0.42_k0.091.jsonl  meanrev_BLK_dev0.4_lr5_ls46_hr0.50_k0.059.jsonl  meanrev_BLK_dev0.5_lr3_ls20_hr0.63_k0.077.jsonl  meanrev_BLK_dev0.5_lr4_ls54_hr0.52_k0.087.jsonl  meanrev_BLK_dev0.5_lr4_ls59_hr0.47_k0.081.jsonl  meanrev_BLK_dev0.9_lr3_ls54_hr0.59_k0.056.jsonl  meanrev_BLK_dev1.0_lr4_ls28_hr0.47_k0.024.jsonl  meanrev_BLK_dev1.1_lr4_ls47_hr0.61_k0.098.jsonl  meanrev_BLK_dev1.2_lr4_ls35_hr0.56_k0.017.jsonl  meanrev_FG3M_dev0.3_lr8_ls35_hr0.55_k0.025.jsonl  meanrev_FG3M_dev0.5_lr5_ls46_hr0.62_k0.090.jsonl  meanrev_FG3M_dev0.5_lr6_ls41_hr0.45_k0.094.jsonl  (+34 more)
results/lab/: experiments.jsonl
src/: main.cpp
(+64 files in other folders)
